Update canvas size on resize, adjust blur filter, remove unnecessary event listener function wrapper.

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
    <div class="background">
-      <canvas id="Plexus Canvas" class="Plexus-Canvas"></canvas>
+      <canvas id="Plexus Canvas"></canvas>
       <div class="blur">
          <div class="clip"></div>
       </div>
