Update HTML and CSS structure.

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
          <canvas id="Plexus Canvas"></canvas>
       </div>
    </div>
-   <div class="Window">
-      
+   <div class="Main">
+      <div class="Centred"></div>
    </div>
 
    <script src="Js/Plexus.js"></script>
