Update HTML and CSS for new layout and branding

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
     <link rel="icon" href="/Assets/Badges/Luna.png" type="image/x-icon">
-    <title>Lunazure</title>
+    <title>Azurelight</title>
 </head>
 <body>
    <div class="background">
@@ -15,7 +15,19 @@
       </div>
    </div>
    <div class="Main">
-      <div class="Centred"></div>
+      <div class="Collumn">
+         <div class="Window">
+            <div class="Hero">
+               <h1>testing title</h1>
+               <img src="Assets/Badges/Luna.png" alt="Azurelight Icon/Logo">
+            </div>
+         </div>
+         <div class="Window">
+            <div class="Hero">
+               <h1>testing title</h1>
+            </div>
+         </div>
+      </div>
    </div>
 
    <script src="Js/Plexus.js"></script>
