Plexus.js and index.html: - Changed the color palette for the particles. - Changed the speed of the particles. - Changed the way particles are initialized. - Added a blur effect to the second logo in the hero section. - Changed the margin and height of the body and html elements.

--- a/index.html
+++ b/index.html
@@ -19,7 +19,10 @@
          <div class="Window">
             <div class="Hero">
                <h1>testing title</h1>
-               <img src="Assets/Badges/Luna.png" alt="Azurelight Icon/Logo">
+               <div class="Hero_Logo">
+                  <img src="Assets/Badges/Luna.png" alt="Azurelight Icon/Logo">
+                  <img src="Assets/Badges/Luna.png" alt="Azurelight Icon/Logo">
+               </div>
             </div>
          </div>
          <div class="Window">
@@ -29,7 +32,7 @@
          </div>
       </div>
    </div>
-
+   
    <script src="Js/Plexus.js"></script>
    <script src="script.js"></script>
 </body>
